<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insulin Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_dialog_title">Meal Insulin Schedule</string>
    <string name="msg_exit">Press back again to exit</string>

    <string-array name="capacity">
        <item>100</item>
        <item>50</item>
    </string-array>

    <string name="msg_value_n_required">This field is required</string>
    <string name="msg_value_n_error">Please enter numbers</string>
    <string name="msg_value_r_required">This field is required</string>
    <string name="msg_value_r_error">Please enter numbers</string>
    <string name="msg_value_sms_number_required">Fill number or remove sms check</string>
    <string name="msg_value_sms_number_error">Invalid phone number</string>
    <string name="msg_value_time_required">This field is required</string>
    <string name="msg_value_time_error">Please enter valid time for %1$s between %2$d and %3$d</string>
    <string name="msg_breakfast">Breakfast Insulin Reminder!</string>
    <string name="msg_lunch">Lunch Insulin Reminder!</string>
    <string name="msg_dinner">Dinner Insulin Reminder!</string>
    <string name="insulin_notification_title_template">Insulin: %1$s</string>
    <string name="insulin_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_alarm">Insulin Reminder Alarm</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="msg_values_error">Remove alarm check or enter at least one insulin value</string>
    <string name="msg_capacity_error">Syringe capacity error</string>
    <string name="insulin_reminder_values">Insulin: R=%1$d - N=%2$d</string>
    <string name="btDone">Done</string>
    <string name="btSnooze">Snooze!!</string>
    <string name="tvTimerLabel">SMS timer:</string>
    <string name="btAnimate">Animate</string>
    <string name="tvValues">Insulin: R=0 - N=0</string>
    <string name="tvTimer">00\":00\'</string>
    <string name="tvMealType">Title</string>
    <string name="tvTimeLabel">Time:</string>
    <string name="tvTime">07:00</string>
    <string name="tvValueR">R:</string>
    <string name="etvValueR">0</string>
    <string name="tvValueN">N:</string>
    <string name="etvValueN">0</string>
    <string name="cbAlarm">Alarm</string>
    <string name="cbSms">if I forget SMS to:</string>
    <string name="btUpdate">Update</string>
    <string name="btCancel">Cancel</string>
    <string name="tvVa">Insulin Values:</string>
    <string name="todo">TODO</string>
    <string name="syringe_capacity">Syringe Capacity</string>
    <string name="insulin_regular">Insulin Regular:</string>
    <string name="etR">4</string>
    <string name="insulin_nph">Insulin NPH:</string>
    <string name="etN">20</string>
    <string name="btAnimate1">Animate1</string>

</resources>