<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_height="match_parent"
    android:background="#fff"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.ir.SyringeFragment"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://schemas.android.com/tools ">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_breakfast"
            android:tint="@color/theme_green" />

        <TextView
            android:id="@+id/tvMealType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/tvMealType"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_green_dark" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.ir.InsulinSyringeView
                android:id="@+id/insulinSyringeView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTimeLabel" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn"
                    android:ems="10"
                    android:padding="5dp"
                    android:text="@string/tvTime"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    android:textColor="#000" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvVa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvVa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvValueR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvValueR" />

                <EditText
                    android:id="@+id/etValueR"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/etvValueR"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse" />

                <TextView
                    android:id="@+id/tvValueN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/tvValueN"
                    android:layout_marginStart="5dp" />

                <EditText
                    android:id="@+id/etValueN"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn"
                    android:inputType="number"
                    android:padding="5dp"
                    android:text="@string/etvValueN" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/cbAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cbAlarm"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/cbSms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cbSms"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/etSmsNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="phone"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_btn"
            android:padding="10dp"
            android:text="@string/btUpdate"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_btn"
            android:padding="10dp"
            android:text="@string/btCancel"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
